--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,3 +1,8 @@
-p {
-    color:red;
+#diaporama {
+    width : 980px;
+    height : 480px;
+    top : 80px;
+    margin-right : auto;
+    margin-left : auto;
+    display: hidden;
 }
