Modification avec jQuery

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,8 +1,18 @@
 #diaporama {
     width : 980px;
     height : 480px;
-    top : 80px;
+    top : 0px;
     margin-right : auto;
     margin-left : auto;
-    display: hidden;
+    position: relative;
+    z-index: 0;
+}
+
+#pause {
+    display: none;
+    position: relative;
+    margin-right : auto;
+    margin-left : auto;
+    z-index: 100;
+    color:black;
 }
