--- a/css/mobile.css
+++ b/css/mobile.css
@@ -11,7 +11,7 @@ h1 {
     margin: auto;
     position: relative;
     color: #ffffff;
-    z-index: 1;
+    user-select: none;
 }
 
 #left-arrow {
@@ -22,7 +22,6 @@ h1 {
     display: inline-block;
     height: 80px;
     overflow: hidden;
-    z-index:9999;
 }
 
 #right-arrow {
@@ -33,7 +32,6 @@ h1 {
     display: inline-block;
     height: 80px;
     overflow: hidden;
-    z-index:9999;
 }
 
 .icones-dark {
