--- a/css/mobile.css
+++ b/css/mobile.css
@@ -4,8 +4,7 @@ h1 {
 }
 
 #slider {
-    max-width: 980px;
-    max-height: 480px;
+    width: 100%;
     margin-top: 0px;
     width: auto;
     margin: auto;
@@ -14,9 +13,15 @@ h1 {
     user-select: none;
 }
 
+#diapo{
+    width:100%;
+    margin: auto;
+    max-height: 300px;
+}
+
 #left-arrow {
     position: absolute;
-    top: 45%;
+    top: 35%;
     left: 0;
     font-size: 3.5em;
     display: inline-block;
@@ -26,7 +31,7 @@ h1 {
 
 #right-arrow {
     position: absolute;
-    top: 45%;
+    top: 35%;
     right: 0;
     font-size: 3.5em;
     display: inline-block;
@@ -41,4 +46,10 @@ h1 {
 #left-arrow,
 #right-arrow {
     display: none;
+}
+
+#mapid {
+    margin-top: 50px;
+    width : 70%;
+    height: 380px;
 }
