début du canvas

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -70,4 +70,13 @@ h1 {
 
 #formResa{
     text-align: center;
+    display: none;
+}
+#signature {
+    border: 1px solid black;
+    display: none;
+}
+
+#confirmation {
+    display: none;
 }
