--- a/css/mobile.css
+++ b/css/mobile.css
@@ -50,18 +50,16 @@ h1 {
 
 #main{
     display: flex;
-    margin-top:50px;
-
+    margin-top:10px;
 }
 #mapid {
-    width: 70%;
+    width: 100%;
     height: 430px;
 }
 
 #resa{
-    display: none;
     margin-left:10px;
-    margin-right:10px;
+    margin-right:0px;
     height: 410px;
     border: 1px solid black;
     min-width:28%;
@@ -76,12 +74,27 @@ h1 {
     border: 1px solid black;
 }
 
-#sign{
+#sign {
+        display: none;
         margin: auto;
         width : 250px;
         text-align: center;
 }
 
 #confirmation {
-    display: none;
+    margin: 10px 0 0 0;
+    padding: 0 0 10px 0;
+    border : 1px solid black;
+    text-align: center;
+}
+
+/* Alignement sur mobile */
+@media screen and (max-width: 980px) {
+    #main {
+        flex-direction: column;
+    }
+
+    #resa{
+        margin : 10px 0 0 0;
+    }
 }
