--- a/css/style.css
+++ b/css/style.css
@@ -1,28 +1,49 @@
 h1 {
-    font-size: 3em;
-    text-align: center;
+    font-size: 3.5em;
+    text-align: left;
+    margin-left: 20px;
 }
-
+#container {
+    max-width:1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
 #slider {
-    margin: auto;
     position: relative;
     color: #ffffff;
     -khtml-user-select: none;
     -webkit-user-select: none;
     -moz-user-select: -moz-none;
     -ms-user-select: none;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #diapo {
-    width: 100%;
-    margin: auto;
+    position: relative;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     max-height: 300px;
+    border-radius: 10px;
+    border: 1px solid #CCC;
+    box-shadow: 0px 0px 17px #BBB;
+}
+
+#legende {
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    color: #000000;
+    background-color: #ffffff;
+    font-size: 1.5em;
+    padding: 0 5px 0 5px;
 }
 
 #left-arrow {
     position: absolute;
     top: 35%;
-    left: 0;
+    left: 1px;
     font-size: 3.5em;
     display: inline-block;
     height: 80px;
@@ -32,7 +53,7 @@ h1 {
 #right-arrow {
     position: absolute;
     top: 35%;
-    right: 0;
+    right: 1px;
     font-size: 3.5em;
     display: inline-block;
     height: 80px;
@@ -48,44 +69,52 @@ h1 {
     display: none;
 }
 
-#main{
-    display: flex;
-    margin-top:10px;
+#main {
+    margin : 10px 10px 10px 5px;
 }
+
 #mapid {
-    width: 100%;
+    width: 99%;
     height: 450px;
+    margin: 0 0 10px 7px;
+    border-radius: 10px;
+    
+    border: 1px solid #CCC;
+    box-shadow: 0px 0px 17px #BBB;
 }
 
-#resa{
-    margin-left:10px;
-    margin-right:0px;
-    height: 440px;
-    border: 1px solid black;
-    min-width:28%;
+#resa {
+    min-width: 28%;
     padding: 10px 10px 10px 10px;
+    margin: 0 2px 10px 5px;
+    border-radius: 10px;
+    border: 1px solid #CCC;
+    box-shadow: 0px 0px 17px #BBB;
 }
 
-#formResa{
+#formResa {
     text-align: center;
     display: none;
 }
+
 #signature {
     border: 1px solid black;
 }
 
 #sign {
-        display: none;
-        margin: auto;
-        width : 250px;
-        text-align: center;
+    display: none;
+    margin: auto;
+    width: 250px;
+    text-align: center;
 }
 
 #confirmation {
-    margin: 10px 0 0 0;
-    padding: 0 0 10px 0;
-    border : 1px solid black;
+    padding: 10px 10px 10px 10px;
+    margin: 0 10px 10px 10px;
+    border-radius: 8px;
     text-align: center;
+    border: 1px solid #CCC;
+    box-shadow: 0px 0px 17px #BBB;
 }
 
 #annuler {
@@ -93,12 +122,12 @@ h1 {
 }
 
 /* Alignement sur mobile */
-@media screen and (max-width: 980px) {
+/* @media screen and (max-width: 980px) {
     #main {
         flex-direction: column;
     }
 
     #resa{
         margin : 10px 0 0 0;
-    }
+    } */
 }
