--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ h1 {
     margin-left: auto;
     margin-right: auto;
     max-height: 300px;
+    min-height: 100px;
     border-radius: 10px;
     border: 1px solid #CCC;
     box-shadow: 0px 0px 17px #BBB;
@@ -70,23 +71,24 @@ h1 {
 }
 
 #main {
-    margin : 10px 10px 10px 5px;
+    display: flex;
+    margin : 10px 10px 10px 10px;
 }
 
 #mapid {
-    width: 99%;
-    height: 450px;
-    margin: 0 0 10px 7px;
+    width: 70%;
+    height: 500px;
+    /* margin: 0 0 10px 7px; */
     border-radius: 10px;
-    
     border: 1px solid #CCC;
     box-shadow: 0px 0px 17px #BBB;
 }
 
 #resa {
-    min-width: 28%;
+    width:30%;
+    min-width: 260px;
     padding: 10px 10px 10px 10px;
-    margin: 0 2px 10px 5px;
+    margin-left: 15px;
     border-radius: 10px;
     border: 1px solid #CCC;
     box-shadow: 0px 0px 17px #BBB;
@@ -99,6 +101,9 @@ h1 {
 
 #signature {
     border: 1px solid black;
+    z-index:99;
+    height: 150px;
+    width:220px;
 }
 
 #sign {
@@ -110,8 +115,8 @@ h1 {
 
 #confirmation {
     padding: 10px 10px 10px 10px;
-    margin: 0 10px 10px 10px;
-    border-radius: 8px;
+    margin: 10px 10px 10px 10px;
+    border-radius: 10px;
     text-align: center;
     border: 1px solid #CCC;
     box-shadow: 0px 0px 17px #BBB;
@@ -122,12 +127,24 @@ h1 {
 }
 
 /* Alignement sur mobile */
-/* @media screen and (max-width: 980px) {
+@media screen and (max-width: 720px) {
     #main {
         flex-direction: column;
     }
 
     #resa{
         margin : 10px 0 0 0;
-    } */
+        width: 100%;
+    }
+
+    #mapid {
+        width: 100%;
+        height: 400px;
+    }
+
+    #legende {
+        left: 2%;
+        margin-right: 2%;
+        font-size: 1em;
+    }
 }
