--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,34 @@
+
+body {
+    font-family: 'Trebuchet MS',
+    Arial,
+    sans-serif;
+}
+
+.button {
+    background-color: #5cadd3;
+    width: 100px;
+    text-align: center;
+    padding: 10px 0 8px 0;
+    border-radius: 5px;
+    color: #FFF;
+    border-bottom: 4px solid #379ece;
+    border-left : 0px;
+    border-right: 0px;
+    border-top: 0px;
+    font-size: 0.9em;
+}
+
+.button:hover {
+    background-color: #cdcdcd;
+    color: #555555;
+    border-bottom: 4px solid #b5b5b5;
+}
+
 h1 {
-    font-size: 3.5em;
+    font-size: 2.7em;
     text-align: left;
-    margin-left: 20px;
+    margin: 10px 0 10px 15px;
 }
 #container {
     max-width:1200px;
@@ -24,11 +51,13 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-height: 300px;
-    min-height: 100px;
+/*     max-height: 300px;
+    min-height: 100px; */
     border-radius: 10px;
     border: 1px solid #CCC;
     box-shadow: 0px 0px 17px #BBB;
+    max-width: 100%;
+    height:auto;
 }
 
 #legende {
@@ -102,7 +131,7 @@ h1 {
 #signature {
     border: 1px solid black;
     z-index:99;
-    height: 150px;
+    height: 130px;
     width:220px;
 }
 
@@ -115,7 +144,7 @@ h1 {
 
 #confirmation {
     padding: 10px 10px 10px 10px;
-    margin: 10px 10px 10px 10px;
+    margin: 15px 10px 10px 10px;
     border-radius: 10px;
     text-align: center;
     border: 1px solid #CCC;
