--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ body {
     border-bottom: 4px solid #b5b5b5;
 }
 
+#nom, #prenom {
+    font-size: 0.9em;
+}
+
 h1 {
     font-size: 2.7em;
     text-align: left;
@@ -51,8 +55,6 @@ h1 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-/*     max-height: 300px;
-    min-height: 100px; */
     border-radius: 10px;
     border: 1px solid #CCC;
     box-shadow: 0px 0px 17px #BBB;
@@ -83,7 +85,7 @@ h1 {
 #right-arrow {
     position: absolute;
     top: 35%;
-    right: 1px;
+    right: -1px;
     font-size: 3.5em;
     display: inline-block;
     height: 80px;
@@ -94,11 +96,6 @@ h1 {
     color: rgba(85, 85, 85, .8);
 }
 
-#left-arrow,
-#right-arrow {
-    display: none;
-}
-
 #main {
     display: flex;
     margin : 10px 10px 10px 10px;
@@ -107,15 +104,14 @@ h1 {
 #mapid {
     width: 70%;
     height: 500px;
-    /* margin: 0 0 10px 7px; */
     border-radius: 10px;
     border: 1px solid #CCC;
     box-shadow: 0px 0px 17px #BBB;
+
 }
 
 #resa {
     width:30%;
-    min-width: 260px;
     padding: 10px 10px 10px 10px;
     margin-left: 15px;
     border-radius: 10px;
@@ -159,21 +155,27 @@ h1 {
 @media screen and (max-width: 720px) {
     #main {
         flex-direction: column;
+        padding-right: 20px;
     }
 
     #resa{
-        margin : 10px 0 0 0;
-        width: 100%;
+        width: 100%;      
+        margin: 15px 0px 0px 0px;
     }
 
     #mapid {
         width: 100%;
         height: 400px;
+        padding-right: 20px;
     }
 
     #legende {
         left: 2%;
         margin-right: 2%;
         font-size: 1em;
+    }
+
+    #left-arrow, #right-arrow {
+        top: 20%;
     }
 }
