--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
-
 body {
     font-family: 'Trebuchet MS',
     Arial,
     sans-serif;
+    background-color: #FBFBFB;
 }
 
 .button {
@@ -57,7 +57,6 @@ h1 {
     margin-right: auto;
     border-radius: 10px;
     border: 1px solid #CCC;
-    box-shadow: 0px 0px 17px #BBB;
     max-width: 100%;
     height:auto;
 }
@@ -106,8 +105,6 @@ h1 {
     height: 500px;
     border-radius: 10px;
     border: 1px solid #CCC;
-    box-shadow: 0px 0px 17px #BBB;
-
 }
 
 #resa {
@@ -116,7 +113,7 @@ h1 {
     margin-left: 15px;
     border-radius: 10px;
     border: 1px solid #CCC;
-    box-shadow: 0px 0px 17px #BBB;
+    background-color: #F5F5F5;
 }
 
 #formResa {
@@ -131,7 +128,8 @@ h1 {
 }
 
 #signature {
-    border: 1px solid black;
+    border: 1px solid #CCC;
+    background-color: #FFF;
 }
 
 #sign {
@@ -147,7 +145,7 @@ h1 {
     border-radius: 10px;
     text-align: center;
     border: 1px solid #CCC;
-    box-shadow: 0px 0px 17px #BBB;
+    background-color: #F5F5F5;
 }
 
 #annuler {
